--- a/package.json
+++ b/package.json
@@ -14,20 +14,21 @@
   },
   "dependencies": {
     "@botbuildercommunity/storage-mongodb": "^1.0.1",
-    "botbuilder": "^4.11.0",
-    "botbuilder-adapter-slack": "^1.0.13",
+    "botbuilder": "^4.16.0",
+    "botbuilder-adapter-slack": "^1.0.14",
     "botbuilder-nlpjs": "^1.1.1",
-    "dotenv": "^7.0.0",
-    "restify": "^8.5.1",
-    "typescript": "^4.1.3"
+    "dotenv": "^16.0.1",
+    "restify": "^8.6.1",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "csv-parser": "^3.0.0",
-    "jest": "^26.6.3",
-    "nodemon": "^2.0.7",
-    "prettier": "2.2.1"
+    "jest": "^28.1.2",
+    "nodemon": "^2.0.19",
+    "prettier": "^2.7.1"
   },
-  "resolutions": {
-    "axios": "0.21.1"
+  "overrides": {
+    "xlsx": "^0.18.5"
   }
+
 }
